<resources>
  <string name="app_name">Demo1</string>

  <string name="title_fragment_page1">当前 Fragment1</string>
  <string name="title_fragment_page2">当前 Fragment2</string>
  <string name="title_fragment_page3">当前 Fragment3</string>
  <string name="navigation_fragment_page1">跳转Fragment1</string>
  <string name="navigation_fragment_page2">跳转Fragment2</string>
  <string name="navigation_fragment_page3">跳转Fragment3</string>
  <string name="navigation_fragment_back">返回上一个 Fragment</string>
  <string name="navigation_activity_back">Activity 退出</string>
  <string name="navigation_back_fragment_page1">回到Fragment1</string>
  <string name="navigation_args_1">传递参数 方式1</string>
  <string name="navigation_args_2">传递参数 方式2</string>
  <string name="navigation_fragment5">跳转 ViewModel 第一个页面</string>
  <string name="navigation_fragment6">跳转 ViewModel 第二个页面</string>
  <string name="prompt_input_text">文本输入</string>
  <string name="auto_fill_hint_fragment1_et_data">auto_fill_hint_fragment1_et_data</string>
  <string name="auto_fill_hint_fragment2_et_data">auto_fill_hint_fragment2_et_data</string>

  <string name="args_et_text1">args_et_text1</string>
  <string name="args_et_text2">args_et_text2</string>
  <string name="value_fragment_page1_et_text">value_fragment_page1_et_text</string>

  <string name="menu_call">电话</string>
  <string name="menu_save">保存</string>
  <string name="menu_camera">相机</string>
  <string name="menu_database">数据库</string>

  <string name="title_database_test">数据库测试</string>
  <string name="id">id</string>
  <string name="first_name">姓</string>
  <string name="last_name">名</string>
  <string name="card_number">身份证号码</string>
  <string name="age">年龄</string>
  <string name="address">地址</string>

  <string name="button_add_user">添加User</string>
  <string name="button_add_user_info">添加UserInfo</string>

  <string name="database_path">数据库路径 : %s</string>
  <string name="storage_permission_failed">存储权限授权失败 : %s</string>
  <string name="clear">清空</string>
  <string name="single_query">单表查询</string>
  <string name="transaction">事务</string>

  <string name="send">发送</string>
  <string name="receive">接收</string>

  <string name="success">成功</string>
  <string name="failed">失败</string>

  <string name="classes_info">班级信息</string>
  <string name="classes_database_data">班级数据 : %s</string>
  <string name="classes_operator">班级操作</string>
  <string name="classes_insert">添加班级</string>
  <string name="classes_insert_random">随机添加班级</string>
  <string name="classes_update">更新班级</string>
  <string name="classes_query">查询班级</string>
  <string name="classes_delete">删除班级</string>
  <string name="classes_id">id</string>
  <string name="classes_name">name</string>
  <string name="classes_address">address</string>

  <string name="student_info">学生信息</string>
  <string name="student_database_data">学生数据 : %s</string>
  <string name="student_database_data2">学生多表查询数据 : %s</string>
  <string name="student_classes_id">classes id</string>
  <string name="student_classes_name">classes name</string>
  <string name="student_operator">班级操作</string>
  <string name="student_insert">添加学生</string>
  <string name="student_update">更新学生</string>
  <string name="student_query">查询学生</string>
  <string name="student_delete">删除学生</string>
  <string name="student_multi_query">学生,班级多表查询</string>

  <string name="teacher_info">教师信息</string>
  <string name="teacher_database_data">教师数据 : %s</string>
  <string name="teacher_operator">教师操作</string>
  <string name="teacher_insert">添加教师</string>
  <string name="teacher_update">更新教师</string>
  <string name="teacher_query">查询教师</string>
  <string name="teacher_delete">删除教师</string>

  <string name="view_model_fragment5">View Model 第一个页面</string>
  <string name="view_model_fragment6">View Model 第二个页面</string>
  <string name="view_model_page_random_number">随机数为 %d</string>
  <string name="generate_new_random_number">生成新随机数</string>
  <string name="generate_new_random_number_data">生成新随机数 %d</string>
  <string name="generate_new_random_number_data_string">生成新随机数 %s</string>
  <string name="get_random_number_data">获取随机数 %d</string>
  <string name="view_model_clear">View Model Clear</string>
  <string name="view_model_send_data_activity">Fragment数据通信</string>

</resources>
