<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_fragment_page1"
        android:textSize="@dimen/sp_20"
        app:layout_constraintBottom_toTopOf="@+id/et1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/et1"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_5"
        android:autofillHints="@string/auto_fill_hint_fragment1_et_data"
        android:hint="@string/prompt_input_text"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/bt1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_tv" />

    <Button
        android:id="@+id/bt1"
        style="@style/CommonButtonStyle"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_5"
        android:text="@string/navigation_fragment_page2"
        app:layout_constraintBottom_toTopOf="@+id/bt2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et1" />

    <Button
        android:id="@+id/bt2"
        style="@style/CommonButtonStyle"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_5"
        android:text="@string/navigation_fragment_page3"
        app:layout_constraintBottom_toTopOf="@+id/bt3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt1" />

    <Button
        android:id="@+id/bt3"
        style="@style/CommonButtonStyle"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_5"
        android:text="@string/navigation_fragment_back"
        app:layout_constraintBottom_toTopOf="@id/bt4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt2" />

    <Button
        android:id="@+id/bt4"
        style="@style/CommonButtonStyle"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_5"
        android:text="@string/navigation_activity_back"
        app:layout_constraintBottom_toTopOf="@id/bt5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt3" />

    <Button
        android:id="@+id/bt5"
        style="@style/CommonButtonStyle"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_5"
        android:text="@string/navigation_args_1"
        app:layout_constraintBottom_toTopOf="@id/bt6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt4" />

    <Button
        android:id="@+id/bt6"
        style="@style/CommonButtonStyle"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_5"
        android:text="@string/navigation_args_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt5" />


</androidx.constraintlayout.widget.ConstraintLayout>