<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

  <TextView
      android:id="@+id/title_tv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/view_model_fragment6"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      />

  <View
      android:id="@+id/line2"
      android:layout_width="0dp"
      android:layout_height="@dimen/dp_1"
      android:layout_marginBottom="@dimen/dp_2"
      android:layout_marginTop="@dimen/dp_2"
      android:background="@color/colorAccent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/title_tv"
      />

  <TextView
      android:id="@+id/prompt1_tv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/dp_5"
      android:layout_marginTop="@dimen/dp_5"
      android:text="@string/view_model_send_data_activity"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toBottomOf="@id/line2"
      />

  <TextView
      android:id="@+id/data_tv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/dp_10"
      android:textSize="@dimen/sp_20"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/prompt1_tv"
      tools:text="222"
      />

  <Button
      android:id="@+id/send_bt"
      android:layout_width="@dimen/dp_0"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/dp_10"
      android:text="@string/send"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@id/data_tv"
      />

  <Button
      android:id="@+id/bt1"
      android:layout_width="@dimen/dp_0"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/dp_5"
      android:text="@string/navigation_fragment5"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/send_bt"
      style="@style/CommonButtonStyle"
      />

</androidx.constraintlayout.widget.ConstraintLayout>