<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardBackgroundColor="@color/card_view_bg"
    card_view:cardCornerRadius="@dimen/dp_3"
    card_view:cardElevation="@dimen/dp_3"
    card_view:cardUseCompatPadding="true"
    >

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingBottom="@dimen/dp_5"
      android:paddingTop="@dimen/dp_5"
      >

    <TextView
        android:id="@+id/id_tv"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/classes_id"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/name_tv"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/name_tv"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/classes_name"
        app:layout_constraintLeft_toRightOf="@id/id_tv"
        app:layout_constraintRight_toLeftOf="@id/address_tv"
        app:layout_constraintTop_toTopOf="@id/id_tv"
        />

    <TextView
        android:id="@+id/address_tv"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/classes_address"
        app:layout_constraintLeft_toRightOf="@id/name_tv"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/id_tv"
        />

  </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>